k8s/base/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: dashboard

  labels:
    app.kubernetes.io/name: dashboard
    app.kubernetes.io/component: dashboard

spec:
  replicas: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: dashboard

  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashboard
        app.kubernetes.io/component: dashboard

      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"

    spec:
      containers:
        - name: dashboard

          image: telemetry-dashboard:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "300m"
              memory: "256Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 5
