k8s/base/generator-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: generator

  labels:
    app.kubernetes.io/name: generator
    app.kubernetes.io/component: generator

spec:
  replicas: 3

  selector:
    matchLabels:
      app.kubernetes.io/name: generator

  template:
    metadata:
      labels:
        app.kubernetes.io/name: generator
        app.kubernetes.io/component: generator

      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"

    spec:
      containers:
        - name: generator

          image: telemetry-generator:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          startupProbe:
            httpGet:
              path: /health
              port: 8000

            failureThreshold: 30
            periodSeconds: 2

          readinessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 15
            periodSeconds: 10
