k8s/base/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx
  namespace: telemetry

  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/component: nginx

spec:
  replicas: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: nginx

  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/component: nginx

    spec:
      containers:
        - name: nginx

          image: nginx:alpine

          ports:
            - containerPort: 80

          volumeMounts:
            - name: nginx-config

              mountPath: /etc/nginx/nginx.conf

              subPath: nginx.conf

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 300m
              memory: 256Mi

          startupProbe:
            httpGet:
              path: /health
              port: 80

            failureThreshold: 30
            periodSeconds: 2

          readinessProbe:
            httpGet:
              path: /health
              port: 80

            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 80

            initialDelaySeconds: 15
            periodSeconds: 10

      volumes:
        - name: nginx-config

          configMap:
            name: nginx-config
