k8s/base/dashboard-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: dashboard

spec:
  selector:
    app.kubernetes.io/name: dashboard

  ports:
    - port: 80
      targetPort: 8000

  type: ClusterIP
