k8s/base/generator-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: generator

spec:
  selector:
    app.kubernetes.io/name: generator

  ports:
    - name: http
      port: 80
      targetPort: 8000

  type: ClusterIP
