k8s/base/nginx-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx
  namespace: telemetry

spec:
  selector:
    app.kubernetes.io/name: nginx

  ports:
    - port: 80

      targetPort: 80

  type: ClusterIP
