k8s/base/receiver-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: receiver

spec:
  selector:
    app.kubernetes.io/name: receiver

  ports:
    - name: http
      port: 80
      targetPort: 8000

  type: ClusterIP
