k8s/base/redis-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: redis

spec:
  selector:
    app.kubernetes.io/name: redis

  ports:
    - port: 6379
      targetPort: 6379

  type: ClusterIP
