k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: telemetry-ingress
  namespace: telemetry

spec:
  ingressClassName: nginx

  rules:
    - host: telemetry.local

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: dashboard

                port:
                  number: 8000

          - path: /receive

            pathType: Prefix

            backend:
              service:
                name: nginx

                port:
                  number: 80
